[package]
name = "idm"
version = "2.0.0"
edition = "2021"
authors = ["Shay Kadosh"]
description = "Advanced Internet Download Manager - Async Rust CLI with 8 workers, pause/resume/cancel"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"


[lib]
name = "idm_engine"
crate-type = ["cdylib"] # אומר ל-Rust לייצר קובץ .so


#[[bin]]
#name = "idm"
#path = "idm.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
